--- a/translations/en.json
+++ b/translations/en.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "app.jumbotron.text",
-    "message": "-"
+    "message": "Dashboard for creating a schedule for educational institutes"
   },
   {
     "id": "app.login.form.button.submit",
