--- a/translations/uk.json
+++ b/translations/uk.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "app.jumbotron.text",
-    "message": "-"
+    "message": "Панель управління для створення розкладу для навчального закладу"
   },
   {
     "id": "app.login.form.button.submit",
