--- a/translations/en.json
+++ b/translations/en.json
@@ -34,5 +34,9 @@
   {
     "id": "app.errors.user.token.invalid",
     "message": "Token is not valid"
+  },
+  {
+    "id": "app.dashboard.title",
+    "message": "Dashboard"
   }
 ]
