--- a/translations/ru.json
+++ b/translations/ru.json
@@ -34,5 +34,9 @@
   {
     "id": "app.errors.user.token.invalid",
     "message": "Токен недействительный"
+  },
+  {
+    "id": "app.dashboard.title",
+    "message": "Панель управления"
   }
 ]
