--- a/translations/uk.json
+++ b/translations/uk.json
@@ -38,5 +38,9 @@
   {
     "id": "app.dashboard.title",
     "message": "Панель управління"
+  },
+  {
+    "id": "app.dashboard.buttons.addgroup",
+    "message": "Додати групу"
   }
 ]
