--- a/translations/ru.json
+++ b/translations/ru.json
@@ -73,6 +73,10 @@
     "message": "Добавить группу"
   },
   {
+    "id": "app.dashboard.teachers.buttons.addteacher",
+    "message": "Добавить преподавателя"
+  },
+  {
     "id": "app.errors.dashboard.groups.form.addgroup.feedback",
     "message": "Введите название группы"
   },
