--- a/translations/ru.json
+++ b/translations/ru.json
@@ -81,6 +81,14 @@
     "message": "Добавить семестр"
   },
   {
+    "id": "app.dashboard.semesters.item.duration",
+    "message": "длительность"
+  },
+  {
+    "id": "app.dashboard.semesters.item.firstWeekType",
+    "message": "первая неделя"
+  },
+  {
     "id": "app.errors.dashboard.groups.form.addgroup.feedback",
     "message": "Введите название группы"
   },
