--- a/translations/ru.json
+++ b/translations/ru.json
@@ -53,7 +53,7 @@
     "message": "Группы"
   },
   {
-    "id": "app.sidebar.menu.item.lessons",
+    "id": "app.sidebar.menu.item.subjects",
     "message": "Предметы"
   },
   {
