--- a/translations/uk.json
+++ b/translations/uk.json
@@ -53,7 +53,7 @@
     "message": "Групи"
   },
   {
-    "id": "app.sidebar.menu.item.lessons",
+    "id": "app.sidebar.menu.item.subjects",
     "message": "Предмети"
   },
   {
