no records component

--- a/translations/en.json
+++ b/translations/en.json
@@ -170,5 +170,9 @@
   {
     "id": "app.words.practice",
     "message": "Practice"
+  },
+  {
+    "id": "app.words.norecords",
+    "message": "No records"
   }
 ]
