--- a/translations/ru.json
+++ b/translations/ru.json
@@ -171,5 +171,9 @@
   {
     "id": "app.words.practice",
     "message": "Практика"
+  },
+  {
+    "id": "app.words.norecords",
+    "message": "Нет ни одной записи"
   }
 ]
