--- a/translations/ru.json
+++ b/translations/ru.json
@@ -129,6 +129,18 @@
     "message": "Введите имя преподавателя"
   },
   {
+    "id": "app.dashboard.semesters.form.editgroup.schedule.week",
+    "message": "неделя"
+  },
+  {
+    "id": "app.dashboard.semesters.form.editgroup.schedule.event",
+    "message": "пара"
+  },
+  {
+    "id": "app.dashboard.semesters.form.editgroup.schedule.event.freetime",
+    "message": "Окно"
+  },
+  {
     "id": "app.button.back",
     "message": "Назад"
   },
