--- a/translations/en.json
+++ b/translations/en.json
@@ -101,7 +101,7 @@
   },
   {
     "id": "app.dashboard.semesters.form.addsemester.number",
-    "message": "Enter the number of semester"
+    "message": "Enter the number of the semester"
   },
   {
     "id": "app.dashboard.semesters.form.addsemester.number.example",
@@ -109,11 +109,11 @@
   },
   {
     "id": "app.dashboard.semesters.form.addsemester.start",
-    "message": "Enter the start date of semester"
+    "message": "Enter the date of the semester beginning"
   },
   {
     "id": "app.dashboard.semesters.form.addsemester.end",
-    "message": "Enter the end date of semester"
+    "message": "Enter the end date of the semester"
   },
   {
     "id": "app.dashboard.semesters.form.addsemester.firstWeekType",
@@ -156,8 +156,28 @@
     "message": "Free time"
   },
   {
+    "id": "app.dashboard.semesters.form.editgroup.schedule.event.teacher",
+    "message": "Choose a teacher"
+  },
+  {
+    "id": "app.dashboard.semesters.form.editgroup.schedule.event.subject",
+    "message": "Choose a subject"
+  },
+  {
+    "id": "app.dashboard.semesters.form.editgroup.schedule.event.location",
+    "message": "Enter the number of audience"
+  },
+  {
+    "id": "app.dashboard.semesters.form.editgroup.schedule.event.location.placeholder",
+    "message": "For example: 2215"
+  },
+  {
     "id": "app.dashboard.semesters.form.editgroup.schedule.event",
     "message": "lesson"
+  },
+  {
+    "id": "app.dashboard.semesters.form.editgroup.semester",
+    "message": "Choose a semester"
   },
   {
     "id": "app.button.back",
