edit group name, changed requests order, save button

--- a/translations/en.json
+++ b/translations/en.json
@@ -184,6 +184,10 @@
     "message": "Back"
   },
   {
+    "id": "app.button.save",
+    "message": "Save"
+  },
+  {
     "id": "app.button.add",
     "message": "Add"
   },
