--- a/translations/ru.json
+++ b/translations/ru.json
@@ -165,6 +165,10 @@
     "message": "Назад"
   },
   {
+    "id": "app.button.save",
+    "message": "Сохранить"
+  },
+  {
     "id": "app.dashboard.subjects.form.addsubject.input.subjectName.placeholder",
     "message": "Например: Математика"
   },
